<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".EvenementActivity">

    <item android:id="@+id/action_modify"
        android:title="@string/action_modify"
        android:icon="@drawable/ic_modify_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_24dp"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_back"
        android:title="@string/action_back"
        android:icon="@drawable/ic_close_24dp"
        android:orderInCategory="100"
        app:showAsAction="always" />

</menu>
