<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EvenementActivity">

    <LinearLayout
        android:id="@+id/activity_message"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MessageActivity">

        <!-- Etiquette date_time -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time_label"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <!-- Valeur date_time -->
        <TextView android:id="@+id/date_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="10dip"
            android:textSize="17sp"
            android:singleLine="true"/>

        <!-- Etiquette title -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <!-- Valeur title -->
        <TextView android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="10dip"
            android:textSize="17sp"
            android:singleLine="true"/>

        <!-- Etiquette description -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_label"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <!-- Valeur description -->
        <TextView android:id="@+id/description"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:layout_marginBottom="10dip"
            android:textSize="17sp"
            android:singleLine="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>